fix: display none for supercell on landing on mobile

--- a/style.css
+++ b/style.css
@@ -95,11 +95,11 @@ body {
   max-width: 100vw;
 }
 #supercell {
-  visibility: hidden;
+  display: none;
 }
 @media (min-device-width: 813px) {
   #supercell {
-    visibility: visible;
+    display: inline;
     min-width: 50vw;
     max-width: 1500px;
   }
